# sast

./: .gitignore  LICENSE  README.md
sources/app/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
sources/app/src-tauri/.sqlx/: query-02f31ebe9cdc027fafe15424aa482a20a767effcea2ca5ca67d5009bea2b7f1d.json  query-031d9e6a7228fb7411a1aeef3aa54ef05fac1c683a6b3b53a3c95d7a8579b79f.json  query-0364424756e8d0a06bbe53e2e25c9b14e8e4b73d3ed1f9aa7f5659aa3806ba8b.json  query-046f19c644da1003dc591b16037979a35ccd73d21f7fdee765ba1b034b9f6c86.json  query-06e77d43f0f1027048f7051da4db08e43426eba63e384e4f04e1601f87dbc5e3.json  query-07223ff9aefdd070079a1ac6c2e46d9e1f28b4cd9665422a8826d4f38c031066.json  query-097b4e7cb70a60dd1ec3baec5d21b58a5299301a638ffbdb490abebd1d0305ce.json  query-1185729fadb1ab4b73d6b41888ec270de0abec45c0a0dff4112beed54624bf19.json  query-13729cf3f8b04a8302fbff4be786793d17f4f8a66b045d5e42e08bab7c42ecf0.json  query-1d85a800c012c32408f7eabbfc8f3a402967b4fcf2fd37044f6f97ebdded55c8.json  query-1f03a6e8ce893cc15f6ce2fc42f279e39ca256192b45fd87ce3dd8ce86764349.json  query-20dc364834c799cea472131030018397768e1542b51aeb470a6e2690195efe5e.json  query-23321f0f7a3e215ca5f3ce519dd6a9b69eee1e03b29e6220ccefea3ef3b3ea0d.json  query-288fa01db7a86f948b14cb83ff878d70edc61b618967ced52068c4e08fb0a041.json  query-2dc3239d1090be230fe0f687717a941c87c60fc46614a674f1bf5937bfaf6424.json  query-32623b4c257b8d59eacca424de18579bf3b4c55acf8c7a6d5c04e7371c560257.json  query-329c40e13d76a36b017621490f7826c6cb93f3124a2c785530d58d606e4dcf21.json  query-366fcc962629674792d3f7dbe76f28077ca74d6daa6ba7470ef81673f803d566.json  query-3da3e1791d1c43fcf054c1d00faffa6d8d02ab0297d931efddcbfd7d11286ba1.json  query-44bac27d6613dad09a088f959b692a6e73aeff7a9cbedf9ed00152e27772280c.json  query-4ede68f943ac394460f89d497a2c33de7f968fa59a74929b77a013db45309e54.json  query-576dafcae5fed2b8bd52bf4f359c89b40c28fdfe4a12a23cb85774ade08addd3.json  query-6291360bcb674bb8dce5f8f31246285626c3b2330568f969cddabfd459993bc8.json  query-6757b15488f221ce98f14dfd4f02a8affa0f7ac1adc25c9fda29d0d8133cc2b1.json  query-706f68aee9e951ec7f6aed8f200c05ea77c78e15bcac16806fd73caff5cae72e.json  query-7224cd167bf5ce8de13e14f24c1111cc3ffdac5c76249cc2a86d20ec4ace59a0.json  query-7925af4310539a0303c83ccf2e7d90c463de206c6928ff3eddd13ca471fdba6c.json  query-7a40a7e8c47482453493206f39ac6f8054f7722bcee6ffb85c0a554215f57988.json  query-7c0f4013c3752c5c4a1df843b22b89504aa3a9505d8dcf74b79f85615abbf0b7.json  query-7d156582e42e298a591208737203944380fafbd0c4f9272b61fbfd18360abc7f.json  query-7f7c8ad9ba2fe40430fae684852634832589a320851c6ae09ece09e88d94c363.json  query-850bc4fa92c422fcd66807854a057c1bc9d7528663b55ef6d4da217f993c3cff.json  query-8abe1ec12887edabce661e161eb26ca55953e27d1dd33c7849583a34fd6d8b03.json  query-957b48365714438e38c61385ab3caeebf04b94898e9c9f4b1f31c36744b99539.json  query-a63846aa4feb170de5ed0a1b93fba4bcef676af431ed28684b52a679872eefc1.json  query-a9441f5b5b66cb8fe513e29e8be160304a62e8f0f5fc51e4420112bf0af59731.json  query-aa7fe63aab554b3a68c5c9801ab1f8e5006fe4d44e8acc179a14bdbc4c87600e.json  query-aba2b92117805e7f91a52839bead0e6ad368b66f9265acb772704990788a1315.json  query-b04340fbd03350d288b262640657532c5e03fa0566db4e39a487cbdccf52f153.json  query-b6730d47e6c5f12ad69506666b1775a96068372aa97d96c7ce24e70a16b72707.json  (+18 more)
sources/app/src-tauri/capabilities/: default.json
sources/app/src-tauri/icons/: icon.icns
sources/app/src-tauri/migrations/: 20241024103227_create_tables.sql  20250506172038_adjust_placeholder_for_deletion.sql  20250509162613_add_project_quick_switch_keybind_and_favorite.sql  20250731153640_add_jump_into_to_task_set_task.sql
sources/app/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
sources/app/src-tauri/src/commands/: mod.rs  project_commands.rs  pty_commands.rs  setting_commands.rs  task_commands.rs
sources/app/src-tauri/src/contracts/: mod.rs  project_contracts.rs  pty_contracts.rs  setting_contracts.rs  task_contracts.rs
sources/app/src-tauri/src/db/: mod.rs  types.rs
sources/app/src-tauri/src/dtos/: project_dtos.rs
sources/app/src-tauri/src/mappers/: mod.rs  project_mapper.rs  setting_mapper.rs
sources/app/src-tauri/src/models/: mod.rs  project_models.rs  (+1 more)
(+606 files in other folders)
