[package]
name = "sast"
version = "0.1.0"
description = "sast"
authors = ["leonsnajdr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sast_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2.6.0"
tokio = { version = "1.46.1", features = ["macros"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
    "chrono",
    "macros",
    "uuid",
] }
thiserror = "2.0.12"
once_cell = "1.21.3"
specta = { version = "=2.0.0-rc.22", features = ["uuid", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
portable-pty = { version = "0.8.1", features = ["serde_support"] }
tauri-plugin-process = "2.3.0"
tauri-plugin-opener = "2.4.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"
